fix(css): extra whitespace in DocSearch results #328
Problem:
The default bootstrap style adds padding to the `mark` element, which
adds unwanted space in the Algolia DocSearch results.

Solution:
Override the `mark` element, only if it's a child of the `DocSearch` class.

Discussed in https://github.com/neovim/neovim.github.io/issues/310

--- a/css/main.css
+++ b/css/main.css
@@ -560,3 +560,11 @@ iframe.poll {
  .news-section table {
     margin-top: 1rem;
  }
+
+/*
+ * DocSearch overrides
+ */
+
+ .DocSearch mark {
+   padding: 0;
+ }
